[package]
name = "cubik"
description = "OpenGL/glium-based multiplayer game engine"
version = "0.1.0"
authors = ["Darnell Andries <darnell@andries.ca>"]
edition = "2018"
license = "MIT"

[dependencies]
glium = "0.30"
derive_more = "0.99"
image = "0.23"
rusttype = "0.9"
rodio = "0.14"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.5"
